<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝牙自动绑定Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="send_message">发送消息</string>
    <string name="read_message">接收消息</string>
    <string name="send">发送</string>
    <string name="mac_settings">设置MAC</string>
    <string name="pin_settings">设置PIN</string>
    <string name="confirm">确定</string>
    <string name="content">内容</string>

</resources>
