<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical">

	<Button 
	    android:id="@+id/btn_start"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/start"/>
	
	<Button 
	    android:id="@+id/btn_stop"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/stop"/>
	
	<TextView 
	    android:id="@+id/tv_send_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/send_message"/>
	
	<EditText 
	    android:id="@+id/et_send_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/send_message"/>
	<Button 
	    android:id="@+id/btn_send"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/send"/>
	
	<TextView 
	    android:id="@+id/tv_read_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/read_message"/>
	
	<EditText 
	    android:id="@+id/et_read_message"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/read_message"
	    android:focusable="false"/>
</LinearLayout>
